@@ -2,14 +2,17 @@
 
 ## 2024
 
+### Februari
+* `2024-02-02 15:25:10` : Fix certificate permissions on install
+
 ### January
 * `2024-01-26 16:46:24` : RepoMan dependency check updates
-* `2024-01-26 13:38:45` : Kernel update `6.2.0-37` > `6.5.0-15`
+* `2024-01-26 13:38:45` : Kernel update `6.2.0-37` > `6.2.0-39` (kernel 6.5 does not yet support Realtek 8168)
 * `2024-01-25 14:21:40` : Added [RepoMan](./RepoMan.sh) dependencies to [BUILD packages](./config/packages/BUILD)
 * `2024-01-22 18:01:45` : BATS tests refactored into single file: `./test/00_BCLD-BUILD.bats`
 * `2024-01-22 16:05:02` : Removing `test/00_PRE-BUILD.bats` because tests are not portable
 * `2024-01-12 16:58:28` : Added `shellcheck` to `BUILD` packages and `./test/BCLD-BATS.sh`
-* `2024-01-12 14:27:53` : Added pactl scan before starting the app to detect hidden sinks
+* `2024-01-12 14:27:53` : [OAC-897] Added pactl scan before starting the app to detect hidden sinks
 * `2024-01-11 13:48:04` : Expand HashGen to include `./.assets` and `./.github`
 * `2024-01-10 12:39:20` : Vendorless BCLD released on GitHub
     - BATS modules readded
